schema_derive/tests/ui/fail/fail_on_tuple_struct.rs
use parameter_schema_derive::InputSchema;

#[derive(InputSchema)]
struct TupleStruct(f32, i32);

fn main() {}
