schema_derive/tests/ui/fail/fail_on_tuple_struct.stderr
error: Schema can only be derived for structs with named fields
 --> tests/ui/fail_on_tuple_struct.rs:3:10
  |
3 | #[derive(InputSchema)]
  |          ^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `InputSchema` (in Nightly builds, run with -Z macro-backtrace for more info)
